<?xml version="1.0"?>
<package format="2">
  <name>mapping_robot</name>
  <version>0.0.0</version>
  <description>The mapping_robot package</description>

  <maintainer email="Kwiatkowski.Szymon97@gmail.com">Tharazi97</maintainer>

  <license>BSD</license>

  <url type="website">https://github.com/MichalJes/ROS-mapping-robot</url>

  <author email="Kwiatkowski.Szymon97@gmail.com">Szymon Kwiatkowski</author>
  <author email="Michal.Jes@gmail.com">Michal Jeske</author>
  <author email="Na.Kolodziejczyk@gmail.com">Natalia Kołodziejczyk</author>

  <!-- Dependencies -->
  <build_depend>message_generation</build_depend>
  <build_export_depend>message_generation</build_export_depend>
  <exec_depend>message_runtime</exec_depend>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>


  <export>

  </export>
</package>
